--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "api:generate": "orval"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.0.5",
     "axios": "^1.5.1",
+    "clsx": "^2.0.0",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18"
